--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
     <div class="w-full max-w-lg card-bg p-6 sm:p-10 rounded-xl shadow-2xl transition-all duration-300">
         <!-- LOGO -->
         <div class="flex justify-center mb-6">
-            <a href="https://imgbb.com/">
-                <img src="https://i.ibb.co/cn7d3rJ/Gemini-Generated-Image-elm44qelm44qelm4.png" 
-                     alt="Logo de la Aplicación" 
-                     class="h-20 w-20 rounded-full object-cover">
-            </a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/fzKg4fGZ/logo-2.jpg" alt="logo-2" border="0"></a>
         </div>
         
         <h1 class="text-3xl font-extrabold text-gray-900 mb-2 text-center">
